# icukit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  cli.md  generate.py  install.md
icukit/: __init__.py  collator.py  compact.py  datetime.py  discover.py  duration.py  locale.py  measure.py  plural.py  search.py
icukit/cli/command/: calendar.py  message.py
tests/: test_cli.py
